Updates from ShareLaTeX

--- a/bundler-sigcomm19.tex
+++ b/bundler-sigcomm19.tex
@@ -23,6 +23,8 @@
 \newcommand{\name}{Bundler\xspace}
 \newcommand{\inbox}{sendbox\xspace}
 \newcommand{\outbox}{receivebox\xspace}
+\newcommand{\capinbox}{Sendbox\xspace}
+\newcommand{\capoutbox}{Receivebox\xspace}
 \newcommand{\pair}{\inbox-\outbox pair\xspace}
 
 \begin{document}
