--- a/deployment.tex
+++ b/deployment.tex
@@ -14,7 +14,7 @@
 \end{figure*}
 
 
-Figure~\ref{fig:deploy:arch} \fc{ideally same page} provides an example scenario for deploying \name. The sending domain (depicted as a large content provider) deploys \name's \inbox at its egress to the public network, while the receiving domain (depicted as an enterprise network) deploys the \outbox at its ingress.\footnote{We use these specific examples of sending and receiving domains for simplicity of discussion. Similar arguments would also hold for the other deployment scenarios (such as those exemplified in \S\ref{s:intro}).} All traffic between the \pair is aggregated into the same bundle.\footnote{We discuss different options for establishing pairing between a \inbox and a \outbox in \S\ref{s:discussion}} The \inbox moves the in-network queues built by the bundled traffic to itself (as described later in \S\ref{s:design}). It can thus enforce desired scheduling policies across the traffic in the bundle.
+Figure~\ref{fig:deploy:arch} \fc{ideally same page} provides an example scenario for deploying \name. The sending domain (depicted as a large content provider) deploys \name's \inbox at its egress to the public network, while the receiving domain (depicted as an enterprise network) deploys the \outbox at its ingress.\footnote{We use these specific examples of sending and receiving domains for simplicity of discussion. Similar arguments would also hold for other deployment scenarios (such as those exemplified in \S\ref{s:intro}).} All traffic between the \pair is aggregated into the same bundle.\footnote{We discuss different options for establishing pairing between a \inbox and a \outbox in \S\ref{s:discussion}} The \inbox moves the in-network queues built by the bundled traffic to itself (as described later in \S\ref{s:design}). It can thus enforce desired scheduling policies across the traffic in the bundle.
 %For the rest of this section, we use a running example of the sending domain belonging to and the receiving domain being an enterprise network. Similar arguments would hold for the other deployment scenarios (exemplified in \S\ref{s:intro}) as well. 
 The performance benefits that this provides are dictated by the following.
 
