--- a/intro.tex
+++ b/intro.tex
@@ -18,15 +18,16 @@
 % %; that is, scheduling policy is easier to express at the edge. 
 % Consider examples such as traffic between different campuses of an organization, or a large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), or an organization using an external service (\eg Dropbox), and so on. In each of these scenarios the sender has enough information to unilaterally choose a scheduling or queue management policy for its component flows (such as prioritizing flows based on applications, enforcing fair queueing, or using AQM to bound delays). However, these policies are effective only when enforced on congested links in a flow's path that experience a queue build-up, and such links are often outside the control of the individual customers~\cite{inferring-interdomain-congestion}. 
 
-The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such policies within the network. \radhika{a little more details} However, the Internet, at large, has been unable to enjoy these benefits for reasons discussed below. 
+The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates their performance benefits.
+However, the Internet, at large, has been unable to enjoy these benefits.
 
-Internet content providers (or customers) may desire specific policies for their traffic, as per their own requirements. For example, Netflix might benefit from doing fair queuing across its video traffic, and Amazon might want to prioritize its interactive web store traffic over the long-lived AWS transfers. However, such policies are effective only when enforced on bottleneck links that experience a queue build-up, and such links are often outside the control of individual customers~\cite{inferring-interdomain-congestion, isp-throttle-1, isp-throttle-2, isp-throttle-3}, rendering them incapable of applying desired policies to their traffic. 
+Internet content providers (or customers) may desire such policies for their traffic, as per their own requirements. For example, Netflix might benefit from doing fair queuing across its video traffic, and Amazon might want to prioritize its interactive web store traffic over the long-lived AWS transfers. However, such policies are effective only when enforced on bottleneck links that experience a queue build-up, and such links are often outside the control of individual customers~\cite{inferring-interdomain-congestion, isp-throttle-1, isp-throttle-2, isp-throttle-3}, rendering them incapable of applying desired policies to their traffic. 
 
 Individual ISPs, on the other hand, do have control over the queued up links in their carrier networks to enforce different scheduling and queue management policies. However, they neither have enough visibility into their customer's traffic to choose desired policies, nor enough incentives to enforce them.\footnote{The case for private WANs is different, since they are owned by a single entity, and have, thus, been successful in exploiting the benefits of scheduling~\cite{swan, b4, bwe}. Our focus is public networks.} Large customers might be able to negotiate deals with certain carriers to enforce specific policies~\cite{att-qos}. However, it might not be possible to negotiate such deals with \emph{all} carriers in the traffic's path (especially a small last-mile carrier that is likely to be the bottleneck, and that may not even possess switches equipped with required features). Even if this was somehow made possible, the customers would have no way of knowing whether their policies were enforced as desired, and they would be left at the mercy of these individual ISPs.
 %, they have no way of knowing whether it was done appropriately. 
 
 %So to summarize, while customers may not have enough control over the queued-up links in the network to effectively enforce their desired policies, the ISPs may not have enough incentives or enough visibility into the traffic to do so. 
-To reduce a customer's dependence on the ISPs with respect to how its traffic is managed, this paper attempts to bring a customer's traffic under its own control by simply \emph{moving the queues built in the network to the customer's edge}. Our approach, therefore, allows the customer to effectively enforce its desired scheduling and queue management policies across traffic that share common sender and receiver domains (as described later). The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
+To reduce a customer's dependence on the ISPs with respect to how its traffic is managed, this paper attempts to bring a customer's traffic under its own control by simply \emph{moving the queues built in the network to the customer's edge}. Our approach, therefore, allows the customer to effectively enforce its desired scheduling and queue management policies across traffic that share common sender and receiver domains (as described in \S\fc{X}). The natural question that arises is, how can the queues be moved? This is the primary focus of our work. 
 
 We observe that the \emph{component flows} of the traffic from a given sender's domain, destined for the same downstream domain are likely to share common bottlenecks within the network. Examples include traffic between a large content provider (\eg Amazon, Google, etc.) and a network with many clients (e.g. an enterprise), between two different campuses of an organization, between collaborating institutes, and so on. By (i) aggregating such component flows into a single \emph{bundle} at the sender's egress, and (ii) controlling the outgoing rate of this bundle to match its bottleneck rate in the network, we can effectively \emph{move} the queues built by the traffic in the bundle, from within the network, to the sender's egress itself. 
 %\radhika{is the last sentence too long / hard to understand? suggestions for fixing it?} 
@@ -39,10 +40,10 @@ We propose a new type of middlebox, called a \name, that (1) aggregates the traf
 %\fc{is it not bad to bring up the two-box design here if we don't justify it until later?}
  A \name is comprised of a pair of middleboxes: a \emph{\inbox} that sits at the sender's egress and a \emph{\outbox} that sits at the receiver's ingress. A \emph{bundle} is then defined as a group of flows traversing through the same \inbox and \outbox pair. The bulk of \name's functionality resides at the \inbox, which coordinates with the \outbox to measure congestion signals, such as the round-trip time, and the rate at which packets are received. These signals are used by a standard congestion control algorithm (\reword{having certain properties}, as described in \S\ref{s:design}) that runs at the \inbox and computes appropriate sending rates for each bundle. The sending rates are computed such that the queuing induced by the bundled traffic within the network is minimized and is incurred at the \inbox instead, while ensuring that the bottleneck link in the network remains fully utilized. 
  
- We introduce a novel light-weight methodology for the coordination between the \inbox and the \outbox, which does not require any per-flow state (only requiring per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our overall approach only requires introducing the \name boxes at the customer's edge, and requires no changes to the individual end-hosts (unless needed for a specific scheduling policy \eg adding priority values to packet headers) or to the routers in the network. 
+ We introduce a novel light-weight methodology for the coordination between the \inbox and the \outbox, which does not require any per-flow state (only per-bundle state), and does not require any modifications to the packets traversing the \name boxes. Furthermore, our approach only requires introducing the \name boxes at the customer's edge, and requires no changes to the individual end-hosts (unless needed for a specific scheduling policy, \eg adding priority values to packet headers) or to the routers in the network. 
  
- Notice that our goal is to only do scheduling and queue management across the traffic within the same bundle (and therefore belonging to a single customer). We do not attempt to tackle the significantly more ambitious objective of scheduling traffic across different customers. Furthermore, as we will discuss later, there can be instances where \name fails to provide any performance benefits for the bundled traffic, and falls back to the status quo performance. Nonetheless, we believe that our work, in its simplicity, provides an \emph{immediately deployable} solution for enabling some of the benefits of scheduling and queue management in the Internet, which is something that has been missing from the scheduling literature so far. 
- \fc{We should say something somewhere about sched across bundles and in-bundle/out-of-bundle}
+ Note that our goal is to only do scheduling and queue management across the traffic within the same bundle (and therefore belonging to a single customer). We do not attempt to tackle the significantly more ambitious objective of scheduling traffic across different customers. Furthermore, as we will discuss later, there can be instances where \name fails to provide any performance benefits for the bundled traffic, and falls back to the status quo performance. Nonetheless, we believe that our work, in its simplicity, provides an \emph{immediately deployable} solution for enabling some of the benefits of scheduling and queue management in the Internet, which is something that has been missing from the scheduling literature so far. 
+ \fc{list contributions}
  %\radhika{should i move it up by 2 paragraphs (i.e. right after the 3 points)?} 
 
 % We make the following key contributions:
