--- a/related.tex
+++ b/related.tex
@@ -2,7 +2,7 @@
 \label{s:related}
 
 %With our work sitting at the intersection of highly popular topics of scheduling, congestion control and middleboxes, one can produce a large body of past work related to each topic. However, this unique intersection of topics is also what adds significant novelty to our work. 
-Our work sits at the unique intersection of three popular areas: scheduling, congestion control and middleboxes. We identify the most relevant related works in each of these areas below. 
+Our work sits at the unique intersection of three popular areas: scheduling, congestion control and middleboxes. We identify the most relevant related work in each of these areas below. 
 
 \Para{Enabling packet scheduling in wide-area networks} The PIFO~\cite{pifo} is a programmable priority queue that can be configured to express different scheduling policies at routers. However, not only does it require new router hardware, but it also suffers from the issue of an ISP's limited visibility into the traffic to choose desired policies (and limited incentives to enforce them). UPS~\cite{ups} goes a step further by allowing different scheduling policies to be expressed from the edge via header initialization. 
 %However, since queuing still occurs in the middle of the network, it relies on the customers targeting a common global objective, or on the network operators isolating different customers' traffic, both of which are difficult to realize. 
